@@ -4,6 +4,8 @@ import com.github.nedis.NettyRedisClientImpl;
 import com.github.nedis.RedisClient;
 import com.github.nedis.codec.BulkReply;
 import com.github.nedis.codec.Reply;
+import com.lmax.disruptor.BlockingWaitStrategy;
+import com.lmax.disruptor.dsl.ProducerType;
 import reactor.core.Reactor;
 import reactor.event.Event;
 import reactor.event.dispatch.RingBufferDispatcher;
@@ -26,13 +28,18 @@ import java.util.concurrent.atomic.AtomicInteger;
  */
 public class NedisClientTest {
     //run test
-    //   java -Xmx2g -Xms2g -cp ".:./lib/*" sample.reactoredis.NedisClientTest
+    //   java -Xmx4g -Xms4g -Xmn1500m -XX:+UseConcMarkSweepGC -cp ".:./lib/*" sampleeactoredis.NedisClientTest
+    //
 
+    // two redis : 6379, 16379
+    // optional():
+    // 0 1 core -> one
+    // 2 3 core -> two
 
 
     private static String DATA = "USER_INFO_12345678901234567890123456789021";
 
-    private static final int TOTAL = 1000000;
+    private static final int TOTAL = 2000000;
 
     private static long time1;
 
@@ -72,21 +79,35 @@ public class NedisClientTest {
 //        ExecutorService executorService = Executors.newFixedThreadPool(200);
         ExecutorService executorService = Executors.newSingleThreadExecutor();
 
-        final RedisClient redisClient = new NettyRedisClientImpl("192.168.1.246", 6379);
+        ExecutorService bossPool = Executors.newFixedThreadPool(1);
+        ExecutorService workerPool = Executors.newFixedThreadPool(1);
+
+        final RedisClient redisClient = new NettyRedisClientImpl("192.168.1.246", 6379, workerPool, workerPool);
+        final RedisClient redisClient2 = new NettyRedisClientImpl("192.168.1.246", 16379, bossPool, bossPool);
+
+        System.out.println("start insert data....");
+        final String[] KEYS = insertData(redisClient);
+        insertData(redisClient2);
+        System.out.println("end insert data.");
+        System.gc();
+        System.out.println("wait 10s...");
+        TimeUnit.SECONDS.sleep(10);
+        System.out.println("wait done. start task...");
 
         final AsyncNedisRedisClient client = new AsyncNedisRedisClient(
                 2,
                 new GeneralStrategy<RedisClient, NedisRequestTypes, String, String>() {
                     private int idx = 0;
+                    private int clientIdx = 0;
 
                     @Override
                     public int getReactorHelperCnt() {
-                        return 1;
+                        return 2;
                     }
 
                     @Override
                     public RedisClient decideHelperToBeUsed(Request<NedisRequestTypes, String, String> request, RedisClient[] helpers) {
-                        return helpers[0];
+                        return helpers[clientIdx++ & 1];
                     }
 
                     @Override
@@ -104,7 +125,8 @@ public class NedisClientTest {
 
                     @Override
                     public Reactor buildReactor() {
-                        return new Reactor(new RingBufferDispatcher("client-queue-" + idx.incrementAndGet()));
+//                        return new Reactor(new RingBufferDispatcher("client-queue-" + idx.incrementAndGet()));
+                        return new Reactor(new RingBufferDispatcher("client-queue-" + idx.incrementAndGet(), 2048, ProducerType.MULTI, new BlockingWaitStrategy()));
                     }
                 },
                 executorService,
@@ -118,7 +140,7 @@ public class NedisClientTest {
                         request.getRequestTypeIdentifier().executeAsync(helper, request.getRequestData(), new com.github.nedis.callback.Callback() {
                             @Override
                             public void onReceive(Reply reply) {
-                                String result = reply == null ? null : ((BulkReply)reply).getString();
+                                String result = reply == null ? null : ((BulkReply) reply).getString();
                                 request.setResult(result);
 //                                executorService.submit(request.getCallback());
 
@@ -142,67 +164,30 @@ public class NedisClientTest {
                     @Override
                     public RedisClient[] build(int cnt) {
                         RedisClient[] redisClients = new RedisClient[cnt];
-                        Arrays.fill(redisClients, redisClient);
+                        if (cnt == 2) {
+//                            redisClients[0] = redisClient;
+//                            redisClients[1] = redisClient2;
+//                            System.out.println("build two client for each.");
+                            // make client order safe
+                            redisClients[0] = new NettyRedisClientImpl("192.168.1.246", 6379, Executors.newFixedThreadPool(1), Executors.newFixedThreadPool(2));
+                            redisClients[1] = new NettyRedisClientImpl("192.168.1.246", 16379, Executors.newFixedThreadPool(1), 1, Executors.newFixedThreadPool(2), 1);
+                        } else {
+                            Arrays.fill(redisClients, redisClient);
+                        }
                         return redisClients;
                     }
                 }
         );
 
         //build send thread
-        Thread thread = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                for (int i = 0; i < TOTAL; i++) {
-                    client.request(new Request<NedisRequestTypes, String, String>() {
-                        private String result;
-
-                        @Override
-                        public NedisRequestTypes getRequestTypeIdentifier() {
-                            return NedisRequestTypes.GET;
-                        }
-
-                        @Override
-                        public String getRequestData() {
-                            return DATA;
-                        }
-
-                        @Override
-                        public String getResult() {
-                            return this.result;
-                        }
-
-                        @Override
-                        public Request setResult(String result) {
-                            this.result = result;
-                            return this;
-                        }
-
-                        @Override
-                        public Callback getCallback() {
-                            return new RedisCallback<NedisRequestTypes, String, String>(this) {
-                                @Override
-                                public void run() {
-                                    ssss s = local.get(Thread.currentThread().getName());
-                                    if (s != null) {
-                                        s.cnt++;
-                                    } else {
-                                        s = new ssss();
-                                        local.put(Thread.currentThread().getName(), s);
-                                    }
-//                                    this.getRequest().getResult();
-                                }
-                            };
-                        }
-                    });
-                }
-                System.out.println("send done: " + System.currentTimeMillis());
-            }
-        });
+        Thread thread = new Thread(new SendTask(client, KEYS));
+        Thread thread2 = new Thread(new SendTask(client, KEYS));
 
         time1 = System.currentTimeMillis();
         System.out.println("start: " + time1);
 
         thread.start();
+        thread2.start();
 
         TimeUnit.SECONDS.sleep(100);
 
@@ -210,5 +195,79 @@ public class NedisClientTest {
 
         System.exit(1);
 
+    }
+
+    private static String[] insertData(final RedisClient redisClient) {
+        String[] keys = new String[TOTAL];
+        System.out.println("gen keys....");
+        for (int i = 0, k = 1000000; i < TOTAL; i++, k++) {
+            keys[i] = "USER_INFO_abcdefghijklmnopqrstuvwxyz" + k;
+        }
+        System.out.println("set key/value....");
+        for (int i = 0, k = 1000000; i < TOTAL; i++, k++) {
+            redisClient.set(keys[i], "/faceshow/FrontServer/FrontServer000000" + k);
+        }
+        System.out.println("prepare done.");
+        return keys;
+    }
+
+    private static class SendTask implements Runnable {
+        private AsyncNedisRedisClient client;
+        private String[] KEYS;
+
+        private SendTask(AsyncNedisRedisClient client, String[] keys) {
+            this.client = client;
+            this.KEYS = keys;
+        }
+
+        @Override
+        public void run() {
+            int sendTotal = TOTAL/2;
+            for (int i = 0; i < sendTotal; i++) {
+                final int finalI = i;
+                client.request(new Request<NedisRequestTypes, String, String>() {
+                    private String result;
+
+                    @Override
+                    public NedisRequestTypes getRequestTypeIdentifier() {
+                        return NedisRequestTypes.GET;
+                    }
+
+                    @Override
+                    public String getRequestData() {
+                        return KEYS[finalI];
+                    }
+
+                    @Override
+                    public String getResult() {
+                        return this.result;
+                    }
+
+                    @Override
+                    public Request setResult(String result) {
+                        this.result = result;
+                        return this;
+                    }
+
+                    @Override
+                    public Callback getCallback() {
+                        return new RedisCallback<NedisRequestTypes, String, String>(this) {
+                            @Override
+                            public void run() {
+                                ssss s = local.get(Thread.currentThread().getName());
+                                if (s != null) {
+                                    s.cnt++;
+                                } else {
+                                    s = new ssss();
+                                    local.put(Thread.currentThread().getName(), s);
+                                }
+//                                    this.getRequest().getResult();
+                            }
+                        };
+                    }
+                });
+            }
+            System.out.println("send done: " + System.currentTimeMillis());
+        }
     }
 }
